--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preload" href="/app/assets/fonts/GoogleSans-Regular.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/app/assets/fonts/Charlotte.ttf" as="font" type="font/ttf" crossorigin />
     <title>OneClub</title>
     <style type="text/css" media="all">
       @media only screen and (prefers-color-scheme: light) {
