--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
           --color-on-background: rgba(0, 0, 0, 1);
           --color-surface: rgba(249, 250, 254, 1);
           --color-devider: rgba(0, 0, 0, 0.1);
-          --color-skeleton-base: rgba(0, 0, 0, 0.1);
-          --color-skeleton-highlight: rgba(0, 0, 0, 0.2);
         }
       }
       @media only screen and (prefers-color-scheme: dark) {
@@ -29,8 +27,6 @@
           --color-on-background: rgba(255, 255, 255, 1);
           --color-surface: rgba(53, 57, 68, 1);
           --color-devider: rgba(255, 255, 255, 0.1);
-          --color-skeleton-base: rgba(255, 255, 255, 0.1);
-          --color-skeleton-highlight: rgba(255, 255, 255, 0.2);
         }
       }
       /* Regular (400 normal) */
@@ -454,7 +450,8 @@
         }
         .gen .card-header .des span,
         .gen .card-overview span {
-          color: rgba(255, 255, 255, 0.7);
+          color: #ffffff;
+          opacity: 70%;
         }
         .gen .card-overview {
           border-left-color: #ffffff;
@@ -464,41 +461,6 @@
         }
         .gen .card-tag span {
           color: #323640;
-        }
-      }
-      .preloader .gen-card {
-        border-radius: 0;
-      }
-      .preloader .gen-card .header-icon {
-        border-radius: 0;
-      }
-      .preloader .gen .card-header .tit,
-      .preloader .gen .card-header .des,
-      .preloader .gen .card-heading {
-        width: var(--width);
-        height: 18px;
-      }
-      .preloader .gen .card-overview {
-        height: 80px;
-        border-left: none;
-        padding-right: 0;
-        cursor: none;
-      }
-      .preloader .gen .card-tag {
-        border-radius: 0;
-        background-color: transparent;
-      }
-      .skeleton {
-        background-image: linear-gradient(90deg, var(--color-skeleton-base) 0%, var(--color-skeleton-highlight) 20%, var(--color-skeleton-base) 60%);
-        background-size: 200% 100%;
-        animation: shimmer 1.5s linear infinite;
-      }
-      @keyframes shimmer {
-        0% {
-          background-position: 200% 0;
-        }
-        100% {
-          background-position: -200% 0;
         }
       }
     </style>
@@ -537,62 +499,11 @@
             <div class="main">
               <div class="container">
                 <div class="fragment coll">
-                  <div class="preloader">
-                    <div class="gen">
-                      <div class="gen-card">
-                        <div class="card-header">
-                          <div class="header-icon skeleton"></div>
-                          <div class="header-info">
-                            <div class="tit skeleton" style="--width: 45%"></div>
-                            <div class="des skeleton" style="--width: 85%"></div>
-                          </div>
-                        </div>
-                        <div class="card-main">
-                          <div class="card-heading skeleton" style="--width: 35%"></div>
-                          <div class="card-overview skeleton"></div>
-                        </div>
-                        <div class="card-footer">
-                          <div class="card-tag skeleton"></div>
-                        </div>
-                      </div>
-                      <div class="gen-card">
-                        <div class="card-header">
-                          <div class="header-icon skeleton"></div>
-                          <div class="header-info">
-                            <div class="tit skeleton" style="--width: 45%"></div>
-                            <div class="des skeleton" style="--width: 85%"></div>
-                          </div>
-                        </div>
-                        <div class="card-main">
-                          <div class="card-heading skeleton" style="--width: 35%"></div>
-                          <div class="card-overview skeleton"></div>
-                        </div>
-                        <div class="card-footer">
-                          <div class="card-tag skeleton"></div>
-                        </div>
-                      </div>
-                      <div class="gen-card">
-                        <div class="card-header">
-                          <div class="header-icon skeleton"></div>
-                          <div class="header-info">
-                            <div class="tit skeleton" style="--width: 45%"></div>
-                            <div class="des skeleton" style="--width: 85%"></div>
-                          </div>
-                        </div>
-                        <div class="card-main">
-                          <div class="card-heading skeleton" style="--width: 35%"></div>
-                          <div class="card-overview skeleton"></div>
-                        </div>
-                        <div class="card-footer">
-                          <div class="card-tag skeleton"></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <div class="preloader">Loading...</div>
                   <div class="gen"></div>
                 </div>
                 <div class="fragment exp">
-                  <div class="preloader"></div>
+                  <div class="preloader">Loading...</div>
                   <div class="gen"></div>
                 </div>
               </div>
@@ -1258,7 +1169,7 @@
 
       function genCard(index, flag) {
         const getRoot = index => {
-          const items = [".home > .main .coll > .gen", ".home > .main .exp > .gen"];
+          const items = [".home > .main .coll .gen", ".home > .main .exp .gen"];
           return document.querySelector(items[index]);
         };
         const parseData = index => {
