--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
       .gen .card-overview {
         width: 100%;
         padding: 10px;
-        border-left: 2px solid #0b284b;
+        border-left: 2px solid #1d9bf0;
         box-sizing: border-box;
         cursor: pointer;
       }
@@ -450,14 +450,14 @@
         flex: 1;
         height: 45px;
         border-radius: 10px;
-        background-color: #0b284b;
+        background-color: #1d9bf0;
         box-sizing: border-box;
         display: flex;
         justify-content: center;
         align-items: center;
       }
       .gen .card-tag span {
-        color: #f7f9fd;
+        color: #ffffff;
         font-size: 16px;
       }
       @media only screen and (prefers-color-scheme: dark) {
@@ -476,15 +476,6 @@
         .gen .card-header .des span,
         .gen .card-overview span {
           color: rgba(255, 255, 255, 0.7);
-        }
-        .gen .card-overview {
-          border-left-color: #ffffff;
-        }
-        .gen .card-tag {
-          background-color: #ffffff;
-        }
-        .gen .card-tag span {
-          color: #323640;
         }
       }
     </style>
